@@ -2264,10 +2264,15 @@ class ParserElement(ABC):
 
     # Compatibility synonyms
     # fmt: off
-    inlineLiteralsUsing = replaced_by_pep8("inlineLiteralsUsing", inline_literals_using)
-    setDefaultWhitespaceChars = replaced_by_pep8(
+    inlineLiteralsUsing = staticmethod(replaced_by_pep8("inlineLiteralsUsing", inline_literals_using))
+    setDefaultWhitespaceChars = staticmethod(replaced_by_pep8(
         "setDefaultWhitespaceChars", set_default_whitespace_chars
-    )
+    ))
+    disableMemoization = staticmethod(replaced_by_pep8("disableMemoization", disable_memoization))
+    enableLeftRecursion = staticmethod(replaced_by_pep8("enableLeftRecursion", enable_left_recursion))
+    enablePackrat = staticmethod(replaced_by_pep8("enablePackrat", enable_packrat))
+    resetCache = staticmethod(replaced_by_pep8("resetCache", reset_cache))
+
     setResultsName = replaced_by_pep8("setResultsName", set_results_name)
     setBreak = replaced_by_pep8("setBreak", set_break)
     setParseAction = replaced_by_pep8("setParseAction", set_parse_action)
@@ -2275,8 +2280,6 @@ class ParserElement(ABC):
     addCondition = replaced_by_pep8("addCondition", add_condition)
     setFailAction = replaced_by_pep8("setFailAction", set_fail_action)
     tryParse = replaced_by_pep8("tryParse", try_parse)
-    enableLeftRecursion = replaced_by_pep8("enableLeftRecursion", enable_left_recursion)
-    enablePackrat = replaced_by_pep8("enablePackrat", enable_packrat)
     parseString = replaced_by_pep8("parseString", parse_string)
     scanString = replaced_by_pep8("scanString", scan_string)
     transformString = replaced_by_pep8("transformString", transform_string)
@@ -2290,8 +2293,7 @@ class ParserElement(ABC):
     setName = replaced_by_pep8("setName", set_name)
     parseFile = replaced_by_pep8("parseFile", parse_file)
     runTests = replaced_by_pep8("runTests", run_tests)
-    canParseNext = can_parse_next
-    resetCache = reset_cache
+    canParseNext = replaced_by_pep8("canParseNext", can_parse_next)
     defaultName = default_name
     # fmt: on
 
@@ -2556,7 +2558,10 @@ class Keyword(Token):
         """
         Keyword.DEFAULT_KEYWORD_CHARS = chars
 
-    setDefaultKeywordChars = set_default_keyword_chars
+    # Compatibility synonyms
+    setDefaultKeywordChars = staticmethod(
+        replaced_by_pep8("setDefaultKeywordChars", set_default_keyword_chars)
+    )
 
 
 class CaselessLiteral(Literal):
@@ -6070,7 +6075,7 @@ _builtin_exprs: List[ParserElement] = [
     v for v in vars().values() if isinstance(v, ParserElement)
 ]
 
-# backward compatibility names
+# Compatibility synonyms
 # fmt: off
 sglQuotedString = sgl_quoted_string
 dblQuotedString = dbl_quoted_string
